# OpenFActScore

./: .gitignore  README.md  download_database.py  generate_facts.py  llama31.py  pyproject.toml
factscore/: HFmodel.py  Llama3LM.py  atomic_facts.py  factscorer.py  lm.py  retrieval.py  utils.py
metrics/: bs.py  ck.py
scifactcheck/: ofs_eval.py  ofs_eval.sh  utils.py
