[project]
name = "OpenFactscore"
version = "0.1.0"
description = "OpenFactScore is an automatic evaluation metric for factual precision in long-form text generation based on FactScore. It replaces IntructGPT for Atomic Fact Generation and ChatGPT for Atomic Fact Verification for Instruct Llama-8B"
authors = [
    { name = "Lucas Fonseca Lage", email = "lufo01@dfki.de" },
]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "torch>=1.13.0",
    "sentence-transformers>=2.2.2",
    "transformers>=4.29.2",
    "rank-bm25>=0.2.2",
    "spacy>=3.5.3",
    "pysqlite3>=0.5.0",
    "nltk>=3.8.1"
]

[project.urls]
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/lflage/OpenFActScore"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["factscore"]
